--- a/resources/assets/js/lang/en.json
+++ b/resources/assets/js/lang/en.json
@@ -1,34 +1,34 @@
 {
   "ok": "Ok",
-  "cancel": "Cancel",
-  "error_alert_title": "Oops...",
-  "error_alert_text": "Something went wrong! Please try again.",
-  "token_expired_alert_title": "Session Expired!",
-  "token_expired_alert_text": "Please log in again to continue.",
-  "login": "Log In",
-  "register": "Register",
-  "page_not_found": "Page Not Found",
-  "go_home": "Go Home",
-  "logout": "Logout",
+  "cancel": "ідміна",
+  "error_alert_title": "Упс...",
+  "error_alert_text": "Щось пішло не так! Спробуйте знову",
+  "token_expired_alert_title": "Сессія закінчилась",
+  "token_expired_alert_text": "Залогіньтесь знову",
+  "login": "Увійти",
+  "register": "Зареєструватись",
+  "page_not_found": "Сторінку не знайдено",
+  "go_home": "Додому",
+  "logout": "Вихід",
   "email": "Email",
-  "remember_me": "Remember Me",
-  "password": "Password",
-  "forgot_password": "Forgot Your Password?",
-  "confirm_password": "Confirm Password",
-  "name": "Name",
-  "toggle_navigation": "Toggle navigation",
-  "home": "Home",
-  "you_are_logged_in": "You are logged in!",
-  "reset_password": "Reset Password",
-  "send_password_reset_link": "Send Password Reset Link",
-  "settings": "Settings",
-  "profile": "Profile",
-  "your_info": "Your Info",
-  "info_updated": "Your info has been updated!",
-  "update": "Update",
-  "your_password": "Your Password",
-  "password_updated": "Your password has been updated!",
-  "new_password": "New Password",
-  "login_with": "Login with",
-  "register_with": "Register with"
+  "remember_me": "Запамятати мене",
+  "password": "Пароль",
+  "forgot_password": "Забули свій пароль?",
+  "confirm_password": "Підтвердити пароль",
+  "name": "Імя",
+  "toggle_navigation": "Переключити навігацію",
+  "home": "Головна",
+  "you_are_logged_in": "Ви увійшли",
+  "reset_password": "Скинути пароль",
+  "send_password_reset_link": "Надіслати посилання для скинення паролю",
+  "settings": "Налаштування",
+  "profile": "Профіль",
+  "your_info": "Ваша інформація",
+  "info_updated": "Ваша інформація оновлена!",
+  "update": "Оновити",
+  "your_password": "Ваш пароль!",
+  "password_updated": "Ваш пароль оновлено!",
+  "new_password": "Новий пароль",
+  "login_with": "Уійти з",
+  "register_with": "Зареєструватись з"
 }
